# beanhub-import-demo

./: README.md  accounts.bean  commodities.bean  flake.nix  main.bean  pyproject.toml
.beanhub/: imports.yaml
books/: 2023.bean  2024.bean
import-data/connect/American Express/Blue Cash Everyday/: 2024.csv
import-data/mercury/: 2024.csv
