[tool.poetry]
name = "beanhub-import-demo"
version = "0.1.0"
description = ""
authors = ["Fang-Pen Lin <hello@fangpenlin.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beanhub-cli = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
